// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<File /> should render 1`] = `
<ListGroupItem
  allowFocus={false}
  className="spaced"
  style={
    Object {
      "color": "#555",
    }
  }
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={4}
      xs={4}
    >
      <strong>
        foo.fa
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={2}
      xs={2}
    />
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={5}
      xs={5}
    >
      <span>
        Uploaded 
        <RelativeTime
          time="2018-02-14T17:12:00.000000Z"
        />
         by 
        bill
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={1}
      sm={1}
      xs={1}
    >
      <Icon
        bsStyle="danger"
        faStyle="fas"
        fixedWidth={false}
        name="trash"
        onClick={[Function]}
        pullRight={true}
        style={
          Object {
            "fontSize": "17px",
          }
        }
      />
    </Col>
  </Row>
</ListGroupItem>
`;

exports[`<File /> should render when [canRemove=false] 1`] = `
<ListGroupItem
  allowFocus={false}
  className="spaced"
  style={
    Object {
      "color": "#555",
    }
  }
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={4}
      xs={4}
    >
      <strong>
        foo.fa
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={2}
      xs={2}
    />
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={5}
      xs={5}
    >
      <span>
        Uploaded 
        <RelativeTime
          time="2018-02-14T17:12:00.000000Z"
        />
         by 
        bill
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={1}
      sm={1}
      xs={1}
    />
  </Row>
</ListGroupItem>
`;

exports[`<File /> should render when [user=null] 1`] = `
<ListGroupItem
  allowFocus={false}
  className="spaced"
  style={
    Object {
      "color": "#555",
    }
  }
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={4}
      xs={4}
    >
      <strong>
        foo.fa
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={2}
      xs={2}
    />
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={5}
      xs={5}
    >
      <span>
        Retrieved 
        <RelativeTime
          time="2018-02-14T17:12:00.000000Z"
        />
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={1}
      sm={1}
      xs={1}
    >
      <Icon
        bsStyle="danger"
        faStyle="fas"
        fixedWidth={false}
        name="trash"
        onClick={[Function]}
        pullRight={true}
        style={
          Object {
            "fontSize": "17px",
          }
        }
      />
    </Col>
  </Row>
</ListGroupItem>
`;
